<resources>
    <string name="facebook_app_id">256254391542777</string>
    <string name="app_name">aMarket</string>
    <string name="txt_login_LoginActivity">Đăng nhập</string>
    <string name="ext_users_LoginActivity">Tên đăng nhập hoặc số điện thoại</string>
    <string name="ext_password_LoginActivity">Mật khẩu</string>
    <string name="txt_quanmatkhau_LoginActivity">Quên mật khẩu?</string>
    <string name="btn_login_LoginActivity">Đăng nhập</string>
    <string name="txt_signup_LoginActivity">Bạn chưa có tài khoản?</string>
    <string name="txt_signup_SignupActivity">Đăng ký</string>
    <string name="txt_name_SignupActivity">Họ tên</string>
    <string name="txt_name_hint_SignupActivity">Họ và tên của bạn</string>
    <string name="txt_gioitinh_SignupActivity">Giới tính</string>
    <string name="txt_women_SignupActivity">Nữ</string>
    <string name="txt_men_SignupActivity">Nam</string>
    <string name="txt_birthday_SignupActivity">Ngày sinh</string>
    <string name="txt_dd_mm_yyyy_SignupActivity">dd/mm/yyyy</string>
    <string name="txt_continue_SignupActivity">Tiếp theo</string>
    <string name="txt_cancel_SignupActivity">Hủy</string>
    <string name="txt_email_SignupActivity">Email/SDT</string>
    <string name="txt_email_hint_SignupActivity">Email hoặc số điện thoại của bạn</string>
    <string name="txt_password_SignupActivity">Mật khẩu</string>
    <string name="txt_password_hint_SignupActivity">Từ 6 đến 32 ký tự</string>
    <string name="txt_album_SignupActivity">Chọn từ thư viện</string>
    <string name="txt_camera_SignupActivity">Chụp một hình</string>
    <string name="txt_PA_SignupActivity">Nhận các thông tin và chương trình khuyến mãi của
    Pengin qua email. Khi bạn Đăng ký, bạn đã
        đồng ý thực hiện mọi giao dịch mua bán
        theo <i>điều</i></string>
    <string name="txt_1_SignupActivity">1/4</string>
    <string name="txt_2_SignupActivity">2/4</string>
    <string name="txt_3_SignupActivity">3/4</string>
    <string name="txt_4_SignupActivity">4/4</string>
    <string name="title_activity_tab_lay_out">TabLayOutActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txt_today_tablayoutactivity">Hôm nay</string>
    <string name="txt_visit_tablayoutactivity">Tham quan</string>
    <string name="txt_find_tablayoutactivity">Tìm kiếm</string>
    <string name="txt_giohang_tablayoutactivity">Giỏ hàng</string>
    <string name="txt_giohang_textview_tablayoutactivity"><b>Giỏ hàng</b></string>
    <string name="txt_taikhoan_tablayoutactivity">Tài khoản</string>
    <string name="btn_bancantimgi_tablayoutactivity">Bạn cần tìm gì?</string>
    <string name="txt_xuhuong_tablayoutactivity">Xu hướng</string>
    <string name="btn_cancel_tablayoutactivity">Hủy</string>
    <string name="txt_hangbanchay_tablayoutactivity">Hàng bán chạy</string>
    <string name="txt_viewall_tablayoutactivity">Xem tất cả</string>
    <string name="txt_tenhang_tablayoutactivity">VINTAS LOWTOP- \n CORSAIR</string>
    <string name="txt_gia_tablayoutactivity">360.000 VND</string>
    <string name="txt_hangmoi_tablayoutactivity">Hàng mới</string>
    <string name="txt_danhsachcuahang_tablayoutactivity">Danh sách cửa hàng</string>
    <string name="txt_danhsachnganhhang_tablayoutactivity">Danh sách ngành hàng</string>
    <string name="txt_thoitrang_tablayoutactivity">Thời trang</string>
    <string name="txt_lamdep_tablayoutactivity">Làm đẹp</string>
    <string name="txt_trangsuc_tablayoutactivity">Trang sức</string>
    <string name="txt_mevabe_tablayoutactivity">Mẹ và bé</string>
    <string name="txt_thethao_tablayoutactivity">Thể thao và du lịch</string>
    <string name="txt_thucung_tablayoutactivity">Thú cưng</string>
    <string name="txt_bachhoa_tablayoutactivity">Bách hóa</string>
    <string name="txt_amthuc_tablayoutactivity">Ẩm thực</string>
    <string name="txt_tongiao_tablayoutactivity">Tôn giáo</string>
    <string name="txt_tatcacuahang_tablayoutactivity">Tất cả cửa hàng</string>
    <string name="txt_beyeu_tablayoutactivity">Bé yêu -  quần áo, sửa và tả cho bé</string>
    <string name="btn_vao_tablayoutactivity">Vào</string>
    <string name="txt_tenhang_hangbanchay_kieulietke_tablayoutactivity">Vintas Lowtop - Corsair</string>
    <string name="txt_cuahangdatkhach_today">CỬA HÀNG\nĐẮT KHÁCH</string>
    <string name="txt_angianhmua_today">Ăn gì anh mua</string>
    <string name="txt_dacsankhap3mien_today">Đặc sản khắp 3 miền Việt Nam</string>
    <string name="txt_moikhaitruong_today">MỚI KHAI TRƯƠNG</string>
    <string name="txt_chacchancokhuyenmai_today">Chắc Chắn Có Khuyến Mãi\nHoặc Giảm Giá</string>
    <string name="txt_cuahangbabay_today">Cửa hàng baby</string>
    <string name="txt_chucmungnammoi_today">CHÚC MỪNG NĂM MỚI</string>
    <string name="txtphienchodaumua">Phiên\nChợ\nĐầu Xuân</string>
    <string name="txt_giaynam">Giày nam\nBasas Hightop\n- Red Dahlia</string>
    <string name="txt_chaohang_today">CHÀO HÀNG</string>
    <string name="txt_danhriengchoban_today">Dành Riêng Cho Bạn</string>
    <string name="txt_xinchaotruongnhatnam_taikhoan">Xin chào,<b> Người dùng !</b></string>
    <string name="txt_donhangcuatoi_taikhoan">Đơn hàng của tôi</string>
    <string name="txt_danhsachyeuthich_taikhoan">Danh sách yêu thích</string>
    <string name="txt_danhsachmongmuon_taikhoan">Danh sách mong muốn</string>
    <string name="txt_sodiachi_taikhoan">Số địa chỉ</string>
    <string name="txt_thongbao_taikhoan">Thông báo</string>
    <string name="txt_hosocuatoi_taikhoan">Hồ sơ của tôi</string>
    <string name="txt_caidat_taikhoan">Cài đặt</string>
    <string name="txt_giupdo_taikhoan">Giúp đỡ</string>
    <string name="txt_banhangcungchungtoi_taikhoan">Bán hàng cùng chúng tôi</string>
    <string name="txt_dangxuat_taikhoan">Đăng xuất</string>
    <string name="txt_giaohang_donhangcuatoi_taikhoan">Giao hàng\nthành công</string>
    <string name="txt_hoten_hosocuatoi_taikhoan">Họ tên</string>
    <string name="txt_email_hosocuatoi_taikhoan">Email</string>
    <string name="txt_gioitinh_hosocuatoi_taikhoan">Giới tính</string>
    <string name="txt_ngaysinh_hosocuatoi_taikhoan">Ngày sinh</string>
    <string name="txt_matkhau_hosocuatoi_taikhoan">Mật khẩu</string>
    <string name="txt_doimatkhau_hosocuatoi_taikhoan">Đổi mật khẩu</string>
    <string name="txt_matkhaucu_hosocuatoi_taikhoan">Mật khẩu cũ</string>
    <string name="txt_matkhaumoi_hosocuatoi_taikhoan">Mật khẩu mới</string>
    <string name="txt_nhaplai_hosocuatoi_taikhoan">Nhập lại</string>
    <string name="txt_capnhat_hosocuatoi_taikhoan">Cập nhật</string>
    <string name="txt_nam_hosocuatoi_taikhoan">Nam</string>
    <string name="txt_nu_hosocuatoi_taikhoan">Nữ</string>
    <string name="txt_nhapmakhaucu_hosocuatoi_taikhoan">Nhập mật khẩu cũ</string>
    <string name="txt_tu6den32kytu_hosocuatoi_taikhoan">Từ 6 đến 32 ký tự</string>
    <string name="txt_nhaplaimatkhaumoi_hosocuatoi_taikhoan">Nhập lại mật khẩu mới</string>
    <string name="txt_baomatdathang_giohang">BẢO MẬT ĐẶT HÀNG</string>
    <string name="txt_diachigiaohang_giohang">1. Địa chỉ giao hàng</string>
    <string name="txt_dangnhap_giohang">Đăng nhập</string>
    <string name="txt_thanhtoannhanhhon_giohang">để thanh toán\nnhanh hơn</string>
    <string name="txt_donnaysedcgoiden_giohang">Đơn hàng này sẽ được gửi đến:</string>
    <string name="txt_hoten_giohang">Họ tên*</string>
    <string name="txt_email_giohang">Email*</string>
    <string name="txt_sdt_giohang">Số điện thoại*</string>
    <string name="txt_tinh_giohang">Tỉnh/Thành phố*</string>
    <string name="txt_quan_giohang">Quận/Huyện*</string>
    <string name="txt_phuong_giohang">Phường/Xã*</string>
    <string name="txt_diachi_giohang">Địa chỉ cụ thể (tầng, số nhà, đường)*</string>
    <string name="txt_continue_giohang">Tiếp tục</string>
    <string name="txt_thanhtoan_giohang">2. Thanh toán</string>
    <string name="txt_chonhinhthucgiaohang_giohang">Chọn hình thức giao hàng</string>
    <string name="txt_giaohangtieuchuan_giohang">Giao hàng tiêu chuẩn | 10.000 vnd</string>
    <string name="txt_dukiengiaohang_giohang">(Dự kiến giao hàng vào thứ Hai, 20/11/2017)</string>
    <string name="txt_chonhinhthucthanhtoan_giohang">Chọn hình thức thanh toán</string>
    <string name="txt_thanhtoan_1_giohang">Thanh toán bằng tiên khi nhận hàng</string>
    <string name="txt_thanhtoan_2_giohang">Thẻ ATM nội địa/Internet Banking</string>
    <string name="txt_thanhtoan_3_giohang">Thẻ quốc tế Visa, Master, JCB</string>
    <string name="txt_3_dathang_giohang">3. Đặt hàng</string>
    <string name="txt_sua_giohang">SỬA</string>
    <string name="txt_donhang_giohang">Đơn hàng(2 sản phẩm)</string>
    <string name="txt_cungcap_giohang">Cung cấp bởi</string>
    <string name="txt_tamtinh_giohang">Tạm tính:</string>
    <string name="txt_giamgia_giohang">Giảm giá:</string>
    <string name="txt_phivanchuyen_giohang">Phí vận chuyển:</string>
    <string name="txt_thanhtien_giohang">Thành tiền:</string>
    <string name="btn_muahang_giohang">Mua hàng</string>
    <string name="txt_VAT_giohang">(Đã bao gồm VAT)</string>
    <string name="txt_xincamon_giohang">Xin cảm ơn!</string>
    <string name="txt_donhangcuabandangxuli_giohang">Đơn hàng của bạn đang được xử lí.\nBạn có thể xem lại đơn hàng qua email</string>
    <string name="txt_camonbandamua_giohang">Cảm ơn bạn đã mua hàng trên</string>
    <string name="btn_dangkythanhvien_giohang">Đăng ký thành viên</string>
    <string name="btn_trovethamquan_giohang">Trở về Tham quan</string>
    <string name="txt_trove_detail">Trở về</string>
    <string name="txt_themvaogio_detail">Thêm vào giỏ</string>
    <string name="txt_thongtinsanpham_details">Thông tin sản phẩm</string>
    <string name="txt_sanxuat_details">Sản xuất</string>
    <string name="txt_ngaysanxuat_details">Ngày sản xuất</string>
    <string name="txt_xephang_details">Xếp hạng và nhận xét</string>
    <string name="txt_xemthem_details">Xem thêm</string>
    <string name="txt_hoacdangnhapbang_loginactivity">Hoặc đăng nhập bằng</string>
    <string name="txt_cuahang_manage">Cửa hàng</string>
    <string name="txt_khohang_manage">Kho hàng</string>
    <string name="txt_donhang_manage">Đơn hàng</string>
    <string name="txt_thongke_manage">Thống kê</string>
    <string name="txt_tatca_manage">Tất cả</string>
    <string name="txt_dadonggoi_manage">Đã đóng gói</string>
    <string name="txt_dangvanchuyen_manage">Đang vận chuyển</string>
    <string name="txt_giaohangthanhcong_manage">Giao hàng thành công</string>
    <string name="txt_gapsuco_manage">Gặp sự cố</string>
</resources>
