<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="@dimen/dimens_linearlayout_width_SignUpactivity"
            android:layout_height="@dimen/dimens_linearlayout_height_SignUpactivity"
            android:orientation="vertical"
            android:background="@drawable/custom_linearlayout_signupactivity"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_signup_SignupActivity"
                    android:textColor="@color/color_login_loginactivity"
                    android:textStyle="bold"
                    android:textSize="34sp"
                    android:layout_marginLeft="@dimen/dimens_marginright_left_loginactivity"
                    android:layout_marginRight="@dimen/dimens_marginright_left_loginactivity"
                    android:layout_marginTop="@dimen/dimens_margintop_loginactivity"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_2_SignupActivity"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/dimens_marginright_left_loginactivity"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:textSize="11sp"
                    android:textColor="@color/color_text_textview_email_SignUpactivity"
                    android:layout_width="@dimen/dimens_textview_width_SignUpactivity"
                    android:layout_marginTop="@dimen/dimens_margintop_loginactivity"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_name_SignupActivity"
                    android:layout_marginLeft="18dp"
                    />
                <EditText
                    android:layout_marginTop="@dimen/dimens_margintop_loginactivity"
                    android:layout_marginLeft="@dimen/dimens_marginright_left_loginactivity"
                    android:layout_marginRight="@dimen/dimens_marginright_left_loginactivity"
                    android:layout_width="match_parent"
                    android:hint="@string/txt_name_hint_SignupActivity"
                    android:background="@drawable/edittext_custom_loginactivity"
                    android:textSize="10sp"
                    android:layout_height="@dimen/dimens_edittext_height_loginactivity"
                    android:paddingLeft="@dimen/dimens_paddingleft_loginactivity"
                    android:inputType="text"
                    android:paddingRight="@dimen/dimens_paddingleft_loginactivity"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:textSize="11sp"
                    android:textColor="@color/color_text_textview_email_SignUpactivity"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_gioitinh_SignupActivity"
                    android:layout_marginLeft="@dimen/dimens_marginright_left_loginactivity"
                    />
                <RadioGroup
                    android:layout_marginTop="@dimen/dimens_edittext_password_margintop_loginactivity"
                    android:layout_width="fill_parent"
                    android:layout_marginLeft="7dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_women_SignupActivity"
                       />
                    <RadioButton
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_men_SignupActivity"
                       />
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:textSize="11sp"
                    android:textColor="@color/color_text_textview_email_SignUpactivity"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/dimens_textview_password_margintop_SignUpactivity"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_birthday_SignupActivity"
                    android:layout_marginLeft="@dimen/dimens_marginright_left_loginactivity"
                    />
                <EditText
                    android:paddingRight="@dimen/dimens_paddingleft_loginactivity"
                    android:layout_height="@dimen/dimens_edittext_height_loginactivity"
                    android:paddingLeft="@dimen/dimens_paddingleft_loginactivity"
                    android:inputType="date"
                    android:layout_marginTop="@dimen/dimens_edittext_password_margintop_loginactivity"
                    android:textSize="10sp"
                    android:layout_marginLeft="@dimen/dimens_marginleft_signupactivity"
                    android:layout_marginRight="@dimen/dimens_marginright_left_loginactivity"
                    android:background="@drawable/edittext_custom_loginactivity"
                    android:layout_width="match_parent"
                    android:hint="@string/txt_dd_mm_yyyy_SignupActivity"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_button_login_height_loginactivity"
                    android:layout_gravity="center"
                    android:layout_marginTop="21dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="2"
                    android:background="@drawable/custom_button_signupactivity_cancel"
                    android:text="@string/txt_cancel_SignupActivity"
                    android:textAllCaps="false"
                    android:textColor="@color/color_text_button_login_loginactivity"
                    android:textSize="12sp" />
                <Button
                    android:id="@+id/btn_continue_SignUpActivity_2"
                    android:layout_weight="1"
                    android:layout_marginTop="21dp"
                    android:background="@drawable/custom_button_sigunactivity_continue"
                    android:layout_gravity="center"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_button_login_height_loginactivity"
                    android:text="@string/txt_continue_SignupActivity"
                    android:textColor="@color/color_text_button_login_loginactivity"
                    android:textSize="12sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>