<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_hosocuatoi_taikhoan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/toolbar_hosocuatoi_taikhoan"
                    layout="@layout/toobar_hosocuatoi_taikhoan"></include>

                <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/main_content_today1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="false"
                    tools:context="vn.edu.poly.project_one.TabLayOutActivity">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.AppBarLayout
                            android:id="@+id/appbar_today1"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/color_background_tablayoutactivity"
                            android:theme="@style/AppTheme.AppBarOverlay">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="horizontal">

                                    <ImageView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@drawable/nhat_nam" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:layout_marginLeft="15dp"
                                        android:text="@string/txt_xinchaotruongnhatnam_taikhoan"
                                        android:textColor="#34495E"
                                        android:textSize="15sp" />
                                </LinearLayout>
                            </RelativeLayout>
                        </android.support.design.widget.AppBarLayout>
                    </RelativeLayout>
                </android.support.design.widget.CoordinatorLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:alpha="0.21"
                    android:background="#95989A"></View>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_hoten_hosocuatoi_taikhoan"
                    android:textColor="#95989A"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_edittext_hosocuatoi_taikhoan"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_email_hosocuatoi_taikhoan"
                    android:textColor="#95989A"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_edittext_hosocuatoi_taikhoan"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_gioitinh_hosocuatoi_taikhoan"
                    android:textColor="#95989A"
                    android:textSize="12sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_edittext_hosocuatoi_taikhoan"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <RadioButton
                        android:id="@+id/radio_nu"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:button="@drawable/select_check"
                        android:paddingLeft="15dp"
                        android:text="@string/txt_nu_hosocuatoi_taikhoan"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/radio_nam"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:button="@drawable/select_check"
                        android:paddingLeft="15dp"
                        android:text="@string/txt_nam_hosocuatoi_taikhoan"
                        android:textSize="15sp" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_ngaysinh_hosocuatoi_taikhoan"
                    android:textColor="#95989A"
                    android:textSize="12sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_edittext_hosocuatoi_taikhoan"
                    android:inputType="date"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/txt_matkhau_hosocuatoi_taikhoan"
                    android:textColor="#95989A"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_edittext_hosocuatoi_taikhoan"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/txt_doimatkhau_hosocuatoi_taikhoan"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_matkhaucu_hosocuatoi_taikhoan"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edittext_custom_loginactivity"
                        android:hint="@string/txt_nhapmakhaucu_hosocuatoi_taikhoan"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_matkhaumoi_hosocuatoi_taikhoan"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="33dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edittext_custom_loginactivity"
                        android:hint="@string/txt_tu6den32kytu_hosocuatoi_taikhoan"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_nhaplai_hosocuatoi_taikhoan"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginLeft="63dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edittext_custom_loginactivity"
                        android:hint="@string/txt_nhaplaimatkhaumoi_hosocuatoi_taikhoan"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="#000"
                        android:textSize="12sp" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="20dp"
                    android:background="#1ABC9C"
                    android:text="@string/txt_capnhat_hosocuatoi_taikhoan"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>